environments/prod/kubernetes/services/be/booking-monitoring-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-monitoring-agent
  labels:
    app: booking-monitoring-agent
    env: prod
  namespace: be
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      name: booking-monitoring-agent
      labels:
        app: booking-monitoring-agent
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: booking-monitoring-agent
          image: steblynskyi-docker.jfrog.io/be-booking-monitoring-agent:cc8fd63
          imagePullPolicy: Always
#          Uncomment this section if app has health check endpoint
#          livenessProbe:
#            failureThreshold: 3
#            httpGet:
#              port: http
#              scheme: HTTP
#            initialDelaySeconds: 20
#            periodSeconds: 10
#            successThreshold: 1
#            timeoutSeconds: 5
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 450m
              memory: 1Gi
      restartPolicy: Always
  selector:
    matchLabels:
      app: booking-monitoring-agent
