environments/prod/kubernetes/services/be/reservation-queue-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-queue-processor
  labels:
    app: reservation-queue-processor
    env: prod
  namespace: be
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      name: reservation-queue-processor
      labels:
        app: reservation-queue-processor
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: reservation-queue-processor
          image: steblynskyi-docker.jfrog.io/be-reservation-queue-processor:5670ae221
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 600m
              memory: 450Mi
      restartPolicy: Always
  selector:
    matchLabels:
      app: reservation-queue-processor
