environments/prod/kubernetes/services/be/auth-jwt-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-jwt-api
  labels:
    app: auth-jwt-api
    env: prod
  namespace: be
spec:
  replicas: 3
  revisionHistoryLimit: 3
  template:
    metadata:
      name: auth-jwt-api
      labels:
        app: auth-jwt-api
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: auth-jwt-api
          image: steblynskyi-docker.jfrog.io/steblynskyi.be.api.auth:a8ca20d
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 15m
              memory: 50Mi
            limits:
              cpu: 250m
              memory: 250Mi
          ports:
            - containerPort: 5000
              name: http
      restartPolicy: Always
  selector:
    matchLabels:
      app: auth-jwt-api
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: auth-jwt-api
  namespace: be
  labels:
    Domain: be-auth-jwt-api.steblynskyi.com
spec:
  selector:
    app: auth-jwt-api
  ports:
    - port: 80
      name: http
      targetPort: 5000
      protocol: TCP
  type: NodePort
