environments/prod/kubernetes/services/be/booking-engine-checkin-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-engine-checkin-web
  labels:
    app: booking-engine-checkin-web
    env: prod
  namespace: be
spec:
  replicas: 3
  selector:
    matchLabels:
      app: booking-engine-checkin-web
  revisionHistoryLimit: 1
  template:
    metadata:
      name: booking-engine-checkin-web
      labels:
        env: prod
        app: booking-engine-checkin-web
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: booking-engine-checkin-web
          image: steblynskyi-docker.jfrog.io/be-booking-engine-checkin-web:64568e1
          imagePullPolicy: IfNotPresent
          args:
            - -base-path=/guestportal
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 150m
              memory: 2560Mi
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: booking-engine-checkin-web
  namespace: be
  labels:
    Domain: be-booking-engine-checkin-web.steblynskyi.com
spec:
  selector:
    app: booking-engine-checkin-web
    env: prod
  ports:
    - port: 80
      name: http
      targetPort: 8080
      protocol: TCP
  type: NodePort
