environments/prod/kubernetes/services/be/core-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-api
  labels:
    app: core-api
    env: prod
  namespace: be
spec:
  replicas: 5
  revisionHistoryLimit: 3
  template:
    metadata:
      name: core-api
      labels:
        app: core-api
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: core-api
          image: steblynskyi-docker.jfrog.io/be-core-api:5670ae221
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /be-core/health/live
              port: http
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /be-core/health/status
              port: http
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 150m
              memory: 200Mi
            limits:
              cpu: 550m
              memory: 900Mi
          ports:
            - containerPort: 5000
              name: http
      restartPolicy: Always
  selector:
    matchLabels:
      app: core-api
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /be-core/health/live
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: core-api
  namespace: be
  labels:
    Domain: be-core-api.steblynskyi.com
spec:
  selector:
    app: core-api
  ports:
    - port: 80
      name: http
      targetPort: 5000
      protocol: TCP
  type: NodePort
