environments/prod/kubernetes/services/be/BE-WAF-INGRESS-GLOBAL.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-nbe-ingress-global
  namespace: be
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=PROD,Name=BE-NBE-Ingress-Gloabal
    alb.ingress.kubernetes.io/subnets: subnet-1,subnet-2,subnet-3
    alb.ingress.kubernetes.io/security-groups: sg-1
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:123:certificate/111-222-333-444-555
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=false,access_logs.s3.bucket=steblynskyi-prod-kube-ingress-controller-logs,access_logs.s3.prefix=be,deletion_protection.enabled=true,routing.http2.enabled=true,idle_timeout.timeout_seconds=180
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-east-1:123:regional/webacl/NBE/111-222-333-444-555
spec:
  rules:
    - host: be-booking-engine-api.steblynskyi.com
      http:
        paths:
        - backend:
            service:
              name: booking-engine-api
              port:
                number: 80
          path: /*
          pathType: ImplementationSpecific
    - host: api-engine.book.steblynskyi.com
      http:
        paths:
        - backend:
            service:
              name: booking-engine-api
              port:
                number: 80
          path: /*
          pathType: ImplementationSpecific
    - host: '*.client.steblynskyi.com'
      http:
        paths:
        - backend:
            service:
              name: booking-engine-checkin-web
              port:
                number: 80
          path: /guestportal/*
          pathType: ImplementationSpecific
        - backend:
            service:
              name: booking-engine-config-web
              port:
                number: 80
          path: /admin/*
          pathType: ImplementationSpecific
        - backend:
            service:
              name: booking-engine-web
              port:
                number: 80
          path: /*
          pathType: ImplementationSpecific
